# e_library

./: .gitignore  command.txt  db.sqlite3  pyproject.toml
apps/account/: urls.py
apps/account/admin/: __inti__.py  user_admin.py
apps/account/forms/: account_forms.py  user_forms.py
apps/account/migrations/: 0001_initial.py  0002_user_is_author.py
apps/account/models/: __init__.py  choices.py  user_model.py
apps/account/templates/: base.html  login.html  signup.html
apps/account/templatetags/: rbac_tags.py
apps/account/views/: login_view.py
apps/author/admin/: __init__.py  author_admin.py
apps/author/forms/: education_forms.py  exprience_forms.py
apps/author/function/: unique_username.py
apps/author/migrations/: 0001_initial.py
apps/author/models/: __init__.py  author_model.py
apps/authority/: urls.py
apps/authority/filters/: user_filter.py
apps/authority/templates/: author_delete.html  author_detail.html  author_list.html  book_category_create.html  book_category_list.html  book_list.html  edit_author_experience.html  edit_book.html  edit_subscription.html  staff_delete.html  staff_detail.html  staff_edit.html  staff_list.html  subscription_list.html  user_list.html  user_subscription_edit.html  user_subscription_list.html
apps/authority/views/: author_management.py  authority_home.py  book_management.py  category_management.py  discount_management.py  manage_staff.py  manage_subscription.py  order_management.py  report_management.py  user_management.py
apps/book/: urls.py
apps/book/admin/: __init__.py  (+2 more)
apps/common/: models.py  permissions.py  widgets.py
apps/home/: context_processor.py  urls.py
apps/order/: context_processors.py  urls.py
apps/subscription/: urls.py  utils.py
config/: settings.py  urls.py
media/categories/: book-paper-with-feather-pen-ink-cartoon-icon-illustration-education-object-i_tnVblKE.avif
templates/: authority_base.html  dashboard.html
(+115 files in other folders)
